--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 server.port=8090
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+spring.jpa.database-platform=com.springboot.sqlite.SQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+
+
+spring.datasource.url = jdbc:sqlite:sqlitesample.db
+spring.datasource.driver-class-name = org.sqlite.JDBC
+
+spring.datasource.username = admin
+spring.datasource.password = admin
