--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 server.port=8090
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
-spring.jpa.database-platform=com.springboot.sqlite.SQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
 spring.jpa.hibernate.ddl-auto=create-drop
-
-
-spring.datasource.url = jdbc:sqlite:sqlitesample.db
-spring.datasource.driver-class-name = org.sqlite.JDBC
-
-spring.datasource.username = admin
-spring.datasource.password = admin
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
